[gd_scene load_steps=10 format=2]

[ext_resource path="res://scripts/MainMap.gd" type="Script" id=1]
[ext_resource path="res://scripts/GUI/DevToolbox.tscn" type="PackedScene" id=2]
[ext_resource path="res://scripts/UIContext/UIContextPanel.tscn" type="PackedScene" id=3]
[ext_resource path="res://scripts/WorldMap.tscn" type="PackedScene" id=4]
[ext_resource path="res://assets/TerrainTiles.tres" type="TileSet" id=5]
[ext_resource path="res://scripts/Camera.gd" type="Script" id=6]
[ext_resource path="res://icons/move_marker_32.png" type="Texture" id=7]
[ext_resource path="res://icons/hex/empty.png" type="Texture" id=8]
[ext_resource path="res://scripts/HexCursor.gd" type="Script" id=9]

[node name="MainMap" type="Node" index="0"]

script = ExtResource( 1 )
_sections_unfolded = [ "Anchor", "Margin" ]

[node name="HUDLayer" type="CanvasLayer" parent="." index="0"]

layer = 1
offset = Vector2( 0, 0 )
rotation = 0.0
scale = Vector2( 1, 1 )
transform = Transform2D( 1, 0, 0, 1, 0, 0 )

[node name="DevToolbox" parent="HUDLayer" index="0" instance=ExtResource( 2 )]

[node name="LowerLeftPanel" type="VBoxContainer" parent="HUDLayer" index="1"]

anchor_left = 0.0
anchor_top = 1.0
anchor_right = 0.0
anchor_bottom = 1.0
margin_top = -40.0
margin_right = 600.0
grow_vertical = 0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
alignment = 2
_sections_unfolded = [ "Grow Direction" ]

[node name="UIContextPanel" parent="HUDLayer/LowerLeftPanel" index="0" instance=ExtResource( 3 )]

grow_vertical = 0
_sections_unfolded = [ "Anchor", "Grow Direction", "Margin", "Rect" ]

[node name="WorldMap" parent="." index="1" instance=ExtResource( 4 )]

[node name="TerrainTiles" type="TileMap" parent="WorldMap" index="0"]

mode = 0
tile_set = ExtResource( 5 )
cell_size = Vector2( 128, 110 )
cell_quadrant_size = 16
cell_custom_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
cell_half_offset = 0
cell_tile_origin = 0
cell_y_sort = false
cell_clip_uv = false
collision_use_kinematic = false
collision_friction = 1.0
collision_bounce = 0.0
collision_layer = 1
collision_mask = 1
occluder_light_mask = 1
format = 1
tile_data = PoolIntArray( -131077, 1, 0, -131076, 1, 0, -131075, 1, 0, -131074, 1, 0, -131073, 1, 0, -196608, 1, 0, -196607, 1, 0, -196606, 1, 0, -196605, 1, 0, -65541, 1, 0, -65540, 1, 0, -65539, 1, 0, -65538, 1, 0, -65537, 1, 0, -131072, 1, 0, -131071, 1, 0, -131070, 1, 0, -131069, 1, 0, -131068, 1, 0, -5, 1, 0, -4, 1, 0, -3, 1, 0, -2, 1, 0, -1, 1, 0, -65536, 2, 0, -65535, 2, 0, -65534, 1, 0, -65533, 1, 0, 65531, 1, 0, 65532, 1, 0, 65533, 1, 0, 65534, 1, 0, 65535, 1, 0, 0, 2, 0, 1, 2, 0, 2, 2, 0, 3, 1, 0, 4, 1, 0, 131067, 1, 0, 131068, 1, 0, 131069, 1, 0, 131070, 1, 0, 131071, 1, 0, 65536, 2, 0, 65537, 2, 0, 65538, 1, 0, 65539, 1, 0, 196603, 1, 0, 196604, 1, 0, 196605, 1, 0, 196606, 1, 0, 196607, 1, 0, 131072, 1, 0, 131073, 1, 0, 131074, 1, 0, 131075, 1, 0, 131076, 1, 0 )
_sections_unfolded = [ "Cell" ]

[node name="Camera" type="Camera2D" parent="." index="2"]

anchor_mode = 1
rotating = false
current = true
zoom = Vector2( 1, 1 )
limit_left = -10000000
limit_top = -10000000
limit_right = 10000000
limit_bottom = 10000000
limit_smoothed = false
drag_margin_h_enabled = false
drag_margin_v_enabled = false
smoothing_enabled = true
smoothing_speed = 5.0
offset_v = 0.0
offset_h = 0.0
drag_margin_left = 0.2
drag_margin_top = 0.2
drag_margin_right = 0.2
drag_margin_bottom = 0.2
editor_draw_screen = true
editor_draw_limits = true
editor_draw_drag_margin = true
script = ExtResource( 6 )
_sections_unfolded = [ "Editor", "Limit", "Smoothing", "Visibility" ]

[node name="MoveMarker" type="Sprite" parent="." index="3"]

visible = false
texture = ExtResource( 7 )

[node name="HexCursor" type="Sprite" parent="." index="4"]

modulate = Color( 1, 0.787293, 0.585938, 0.784314 )
texture = ExtResource( 8 )
centered = false
script = ExtResource( 9 )
_sections_unfolded = [ "Offset", "Visibility" ]


